updated profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ title                    : "Michele Campobasso"
 title_separator          : "-"
 name                     : &name "Michele Campobasso"
 description              : &description "Academical page"
-url                      : https://michelecampobasso.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-#url                      : http://localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+#url                      : https://michelecampobasso.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : http://localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "michelecampobasso/michelecampobasso.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Michele Campobasso"
-  avatar           : "profile.jpg"
+  avatar           : "profile2.jpg"
   bio              : "\"Happiness is a byproduct of function, purpose, and conflict; those who seek happiness for itself seek victory without war.\" W.S. Burroughs"
   location         : "Eindhoven, NL"
   employer         :
