--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ title                    : "Home page"
 title_separator          : "-"
 name                     : &name "Michele Campobasso"
 description              : &description "Academical page"
-url                      : https://michelecampobasso.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-#url                      : http://localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+#url                      : https://michelecampobasso.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : http://localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "michelecampobasso/michelecampobasso.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -51,7 +51,7 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 # SEO Related
-google_site_verification :
+google_site_verification : 9UaqG-7wKivG0EkHk_wEwb1hz0eESjImg0SS3XmK-BM
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
