--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ title                    : "Home page"
 title_separator          : "-"
 name                     : &name "Michele Campobasso"
 description              : &description "Academical page"
-#url                      : https://michelecampobasso.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-url                      : http://localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://michelecampobasso.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+#url                      : http://localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "michelecampobasso/michelecampobasso.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -103,8 +103,8 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
-  orcid            : 
+  linkedin         : https://www.linkedin.com/in/michele-campobasso-6634b9119/
+  orcid            : https://orcid.org/0000-0002-5247-7711
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
