--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ social:
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
+    tracking_id          : "UA-180197280-1"
 
 
 # Site Author
