--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ title                    : "Michele Campobasso"
 title_separator          : "-"
 name                     : &name "Michele Campobasso"
 description              : "Academical page of Michele Campobasso. Technical University of Eindhoven. Cybercrime operations, cybercrime ecosystems, emerging threat, threat modelling"
-#url                      : https://michelecampobasso.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-url                      : http://localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://michelecampobasso.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+#url                      : http://localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "michelecampobasso/michelecampobasso.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
