--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,10 @@
 environment              : production
 locale                   : "en-US"
 title                    : "Michele Campobasso"
+tagline                  : "Academical page of Michele Campobasso."
 title_separator          : "-"
 name                     : &name "Michele Campobasso"
-description              : "Academical page of Michele Campobasso. Technical University of Eindhoven. Cybercrime operations, cybercrime ecosystems, emerging threat, threat modelling"
+description              : "Academical page of Michele Campobasso. Technical University of Eindhoven - TU/e. Cybercrime operations, cybercrime ecosystems, emerging threat, threat modelling, threat intelligence."
 url                      : https://michelecampobasso.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 #url                      : http://localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -267,6 +268,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-redirect-from
+  - jekyll-seo-tag
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
