--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ tagline                  : "Academical page of Michele Campobasso."
 title_separator          : "-"
 name                     : &name "Michele Campobasso"
 description              : "Academical page of Michele Campobasso. Technical University of Eindhoven - TU/e. Cybercrime operations, cybercrime ecosystems, emerging threat, threat modelling, threat intelligence."
-url                      : https://michelecampobasso.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-#url                      : http://localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+#url                      : https://michelecampobasso.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : http://localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "michelecampobasso/michelecampobasso.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -184,7 +184,7 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
+  whitepapers:
     output: true
     permalink: /:collection/:path/
   talks:
@@ -247,6 +247,15 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+  # _whitepapers
+  - scope:
+      path: ""
+      type: whitepapers
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
 
 # Sass/SCSS
 sass:
@@ -269,6 +278,8 @@ plugins:
   - jekyll-feed
   - jekyll-redirect-from
   - jekyll-seo-tag
+  - jekyll/scholar
+
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
@@ -313,3 +324,7 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
+
+scholar:
+  group_by: year
