linked to new profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ analytics:
 # Site Author
 author:
   name             : "Michele Campobasso"
-  avatar           : "profile2.jpg"
+  avatar           : "profile.png"
   bio              : "\"Happiness is a byproduct of function, purpose, and conflict; those who seek happiness for itself seek victory without war.\" W.S. Burroughs"
   location         : "Eindhoven, NL"
   employer         :
