--- a/_config.yml
+++ b/_config.yml
@@ -321,10 +321,10 @@ tag_archive:
 
 # HTML Compression
 # - http://jch.penibelst.de/
-compress_html:
-  clippings: all
-  ignore:
-    envs: development
+# compress_html:
+#   clippings: all
+#   ignore:
+#     envs: development
 
 
 scholar:
