--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
   lastfm           :
   linkedin         : https://www.linkedin.com/in/michele-campobasso-6634b9119/
   orcid            : https://orcid.org/0000-0002-5247-7711
-  mastodon         : https://infosec.exchange/@alphacentauri
+  mastodon         : #https://infosec.exchange/@alphacentauri
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
