--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ tagline                  : "Academical page of Michele Campobasso."
 title_separator          : "-"
 name                     : &name "Michele Campobasso"
 description              : "Academical page of Michele Campobasso. Technical University of Eindhoven - TU/e. Cybercrime operations, cybercrime ecosystems, emerging threat, threat modelling, threat intelligence."
-url                      : https://michelecampobasso.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-#url                      : http://localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+#url                      : https://michelecampobasso.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : http://localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "michelecampobasso/michelecampobasso.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -75,11 +75,11 @@ social:
 
 
 # Analytics
-analytics:
-  provider               :  "google-gtag" # false (default), "google", "google-universal", "custom"
-  google:
-    tracking_id          : "UA-180197280-1"
-
+# analytics:
+#   provider               :  "google-gtag" # false (default), "google", "google-universal", "custom"
+#   google:
+#     tracking_id          : "UA-180197280-1"
+google_analytics: 'UA-180197280-1'
 
 # Site Author
 author:
