--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Contacts"
+  - title: "Contacts and CV"
     url: /contacts/
     
   #- title: "White papers"
