--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "TTPs: Talks, Teaching and Press"
+    url: /ttp/    
     
   - title: "Contacts and CV"
     url: /contacts/
