--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   name             : "Michele Campobasso"
   avatar           : "profile.png"
   bio              : "\"Happiness is a byproduct of function, purpose, and conflict; those who seek happiness for itself seek victory without war.\" W.S. Burroughs"
-  location         : "Eindhoven, NL"
+  location         : "Bologna, IT"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=vDHUDEAAAAAJ"
