fixed typos, added podcast

--- a/_config.yml
+++ b/_config.yml
@@ -194,6 +194,9 @@ collections:
   press:
     output: false
     permalink: /:collection/:path/
+  podcasts:
+    output: false
+    permalink: /:collection/:path/
 
 
 # Defaults
