--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "TTPs: Talks, Teaching and Press"
+  - title: "TTPs: Talks, Teaching, Podcasts and Press"
     url: /ttp/    
     
   - title: "Contacts and CV"
